[project]
name = "flash-call"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "River-Walras", email = "nachuan.shi.quant@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
